# musaic

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  Trunk.toml  justfile
.github/workflows/: pages.yml
crates/musaic/: Cargo.toml
crates/musaic-engine/: Cargo.toml
crates/musaic-engine/src/: lib.rs
crates/musaic-protocol/: Cargo.toml
crates/musaic-protocol/src/: lib.rs
crates/musaic-shell/: Cargo.toml
crates/musaic-shell/src/: lib.rs
crates/musaic/css/: asset_grid.css  chat.css  code_editor.css  code_surface.css  core.css  diff.css  disclosure.css  dock.css  drag.css  dynamic_form.css  forms.css  inspector.css  jump.css  list_editor.css  log.css  markdown.css  menus.css  overlays.css  palette.css  search_list.css  status_bar.css  table.css  terminal.css  themes.css  toolbar.css  tree.css  undo_tree.css  viewport.css  virtual_list.css  workspace.css
crates/musaic/src/: ansi_terminal.rs  asset_grid.rs  base.rs  chat.rs  code_editor.rs  code_surface.rs  command.rs  diff.rs  disclosure.rs  dock.rs  dynamic_form.rs  editor_shell.rs  engine.rs  floating.rs  forms.rs  hud.rs  inspector.rs  jump.rs  keymap.rs  lib.rs  list_editor.rs  log_view.rs  markdown.rs  menus.rs  multi_editor.rs  nightshade.rs  palette.rs  pointer_drag.rs  protocol.rs  search_list.rs  status_bar.rs  styles.rs  table.rs  terminal.rs  theme.rs  toolbar.rs  tree.rs  undo_tree.rs  util.rs  viewport.rs  (+3 more)
crates/musaic/src/base/: badge.rs  button.rs  card.rs  feedback.rs  layout.rs  overlay.rs  panel.rs  progress.rs  tooltip.rs
docs/: TEMPLATE.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  app-shell.md  catalog.md  code.md  commands.md  data.md  drag-and-drop.md  extending.md  feature-gates.md  feedback.md  first-ui.md  forms.md  installation.md  introduction.md  overlays.md  project-structure.md  reactivity.md  rendering.md  theming.md
examples/gallery/: Cargo.toml  Trunk.toml  index.html
examples/gallery/desktop/: Cargo.toml
examples/gallery/desktop/src/: main.rs
examples/gallery/public/: gallery.css
examples/gallery/src/: app.rs  lib.rs  main.rs  sections.rs
examples/landing/: Cargo.toml  Trunk.toml  index.html
examples/landing/public/: landing.css
examples/landing/src/: app.rs  main.rs
examples/minimal/: Cargo.toml  Trunk.toml  index.html
examples/minimal/src/: app.rs  main.rs
examples/nightshade_demo/: Cargo.toml  index.html
examples/nightshade_demo/desktop/: Cargo.toml
examples/nightshade_demo/desktop/src/: main.rs
examples/nightshade_demo/protocol/src/: lib.rs
examples/nightshade_demo/public/: demo.css
examples/nightshade_demo/src/: app.rs  components.rs  main.rs  state.rs
examples/nightshade_demo/src/components/: dock.rs  sidebar.rs  toolbar.rs
examples/nightshade_demo/worker/: Cargo.toml
examples/nightshade_demo/worker/src/: lib.rs  state.rs  systems.rs
examples/nightshade_demo/worker/src/systems/: example.rs  setup.rs
