[package]
name = "leptos-musaic-engine"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Worker-side engine driver for leptos-musaic apps backed by the nightshade engine."
repository = "https://github.com/matthewjberger/musaic"

[dependencies]
leptos-musaic = { path = "../musaic", default-features = false, features = ["protocol"] }
nightshade-api = { version = "0.48.0", default-features = false, features = ["picking"] }
nightshade = { version = "0.48.0", features = ["tracing", "debug_render"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "=0.2.115"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "DedicatedWorkerGlobalScope",
    "MessageEvent",
    "OffscreenCanvas",
    "Performance",
] }
