[package]
name = "leptos-musaic-protocol"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Shared page/worker wire protocol for leptos-musaic's engine integration."
repository = "https://github.com/matthewjberger/musaic"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
