[package]
name = "leptos-musaic"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A feature-gated Leptos component library for building beautiful native and wasm UIs."
repository = "https://github.com/matthewjberger/musaic"
readme = "README.md"
keywords = ["leptos", "ui", "wasm", "components", "webgpu"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
leptos-musaic-protocol = { path = "../musaic-protocol" }
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlCanvasElement",
    "HtmlStyleElement",
    "Node",
    "NodeList",
    "OffscreenCanvas",
    "DomRect",
    "DomRectReadOnly",
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "MessageEvent",
    "Event",
    "EventTarget",
    "AddEventListenerOptions",
    "PointerEvent",
    "MouseEvent",
    "WheelEvent",
    "KeyboardEvent",
    "DragEvent",
    "DataTransfer",
    "ResizeObserver",
    "Storage",
    "WebSocket",
    "HtmlAnchorElement",
    "Blob",
    "File",
    "FileList",
    "FileReader",
] }

[features]
default = ["forms", "menus", "themes"]
forms = []
menus = []
themes = []
command-palette = ["menus"]
code-editor = []
table = []
tree = []
inspector = []
dock = []
overlays = []
virtual-list = []
diff = []
drag = []
undo-tree = []
jump = []
terminal = []
workspace = ["drag"]
code-surface = []
disclosure = []
status-bar = []
toolbar = ["menus"]
log = []
markdown = []
search-list = []
asset-grid = []
list-editor = []
chat = []
dynamic-form = ["forms"]
viewport = []
engine = ["viewport"]
nightshade = ["viewport", "code-editor"]
full = [
    "forms",
    "menus",
    "themes",
    "command-palette",
    "code-editor",
    "table",
    "tree",
    "inspector",
    "dock",
    "overlays",
    "virtual-list",
    "diff",
    "drag",
    "undo-tree",
    "jump",
    "terminal",
    "workspace",
    "code-surface",
    "disclosure",
    "status-bar",
    "toolbar",
    "log",
    "markdown",
    "search-list",
    "asset-grid",
    "list-editor",
    "chat",
    "dynamic-form",
    "viewport",
    "engine",
    "nightshade",
]
