[package]
name = "leptos-musaic"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A feature-gated Leptos component library for building beautiful native and wasm UIs."
repository = "https://github.com/matthewjberger/musaic"
readme = "README.md"
keywords = ["leptos", "ui", "wasm", "components", "webgpu"]
categories = ["gui", "wasm", "web-programming"]

[package.metadata.docs.rs]
features = ["full"]
targets = ["wasm32-unknown-unknown"]

[dependencies]
leptos = { version = "0.7", features = ["csr"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlCanvasElement",
    "HtmlStyleElement",
    "Node",
    "NodeList",
    "OffscreenCanvas",
    "DomRect",
    "DomRectReadOnly",
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "MessageEvent",
    "Event",
    "EventTarget",
    "AddEventListenerOptions",
    "PointerEvent",
    "MouseEvent",
    "WheelEvent",
    "KeyboardEvent",
    "DragEvent",
    "DataTransfer",
    "ResizeObserver",
    "Storage",
    "WebSocket",
    "HtmlAnchorElement",
    "Blob",
    "File",
    "FileList",
    "FileReader",
    "Navigator",
    "Clipboard",
    "CompositionEvent",
] }

[features]
default = ["forms", "menus", "themes"]

# Leptos-free wire types shared by the page and a worker (serde only). Enabling
# this alone (with default-features = false) pulls no DOM dependencies.
protocol = ["dep:serde", "dep:serde_json"]

# Internal: everything a rendered component needs. Every UI feature pulls this in,
# so the DOM dependency stack is absent unless at least one component is enabled.
_dom = [
    "dep:leptos",
    "dep:web-sys",
    "dep:wasm-bindgen",
    "dep:js-sys",
    "dep:serde",
    "dep:serde_json",
    "dep:serde-wasm-bindgen",
]

forms = ["_dom"]
menus = ["_dom"]
themes = ["_dom"]
command-palette = ["menus"]
code-editor = ["_dom"]
table = ["_dom"]
tree = ["_dom"]
inspector = ["_dom"]
dock = ["_dom"]
overlays = ["_dom"]
virtual-list = ["_dom"]
diff = ["_dom"]
drag = ["_dom"]
undo-tree = ["_dom"]
jump = ["_dom"]
terminal = ["_dom"]
workspace = ["drag"]
code-surface = ["_dom"]
disclosure = ["_dom"]
status-bar = ["_dom"]
toolbar = ["menus"]
log = ["_dom"]
markdown = ["_dom"]
search-list = ["_dom"]
asset-grid = ["_dom"]
list-editor = ["_dom"]
chat = ["_dom"]
dynamic-form = ["forms"]
viewport = ["_dom", "protocol"]
engine = ["viewport"]
nightshade = ["viewport", "code-editor"]
full = [
    "protocol",
    "forms",
    "menus",
    "themes",
    "command-palette",
    "code-editor",
    "table",
    "tree",
    "inspector",
    "dock",
    "overlays",
    "virtual-list",
    "diff",
    "drag",
    "undo-tree",
    "jump",
    "terminal",
    "workspace",
    "code-surface",
    "disclosure",
    "status-bar",
    "toolbar",
    "log",
    "markdown",
    "search-list",
    "asset-grid",
    "list-editor",
    "chat",
    "dynamic-form",
    "viewport",
    "engine",
    "nightshade",
]
