[package]
name = "nightshade_demo"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
musaic = { path = "../../crates/musaic", features = ["nightshade", "command-palette"] }
protocol = { path = "protocol" }
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "=0.2.115"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Window",
    "Element",
    "HtmlElement",
    "EventTarget",
    "OffscreenCanvas",
    "KeyboardEvent",
    "MouseEvent",
] }
