[package]
name = "nightshade_demo"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
leptos-musaic = { path = "../../crates/musaic", features = [
    "engine",
    "command-palette",
    "nightshade",
    "log",
    "toolbar",
    "status-bar",
    "inspector",
] }
protocol = { path = "protocol" }
leptos = { version = "0.7", features = ["csr"] }
serde_json = "1"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["KeyboardEvent", "MouseEvent"] }
