[package]
name = "worker"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
musaic-engine = { path = "../../../crates/musaic-engine" }
protocol = { path = "../protocol" }
nightshade-api = { version = "0.48.0", default-features = false, features = ["picking"] }
nightshade = { version = "0.48.0", features = ["tracing", "debug_render"] }
serde_json = "1"
wasm-bindgen = "=0.2.115"
